--- a/lesson3_images_w_markup/jeff_r_images/index.html
+++ b/lesson3_images_w_markup/jeff_r_images/index.html
@@ -13,10 +13,15 @@
 		}
 		img {
 			transition: .5s;
-			width: 100vw;
+			width: 50vw;
 		}
 		.profile img {
 			border-radius: 50%;
+		}
+		@media screen and (max-width: 250px) {
+			img {
+				width: 100vw;
+			}
 		}
 		
 	</style>
@@ -24,35 +29,35 @@
 </head>
 <body class="container">
 	<div class="black_crop">
-		<img src="images_dest/crop_black-large.svg" srcset="images_dest/crop_black-small.svg 400w, images_dest/crop_black-medium.svg 800w, images_dest/crop_black-large.svg 1200w" alt="JWR-crop"/>
+		<img src="images_dest/crop_black-large.svg" srcset="images_dest/crop_black-small.svg 400w, images_dest/crop_black-medium.svg 800w, images_dest/crop_black-large.svg 1200w" sizes="(max-width: 250px) 100vw, 50vw"  alt="JWR-crop"/>
 	</div>
 
 	<div class="dsac">
-		<img src="images_dest/DSAC-large.svg" srcset="images_dest/DSAC-small.svg 400w, images_dest/DSAC-medium.svg 800w, images_dest/DSAC-large.svg 1200w" alt="DSAC-logo"/>
+		<img src="images_dest/DSAC-large.svg" srcset="images_dest/DSAC-small.svg 400w, images_dest/DSAC-medium.svg 800w, images_dest/DSAC-large.svg 1200w" sizes="(max-width: 250px) 100vw, 50vw" alt="DSAC-logo"/>
 	</div>
 
 	<div class="jeffreiher_crop">
-		<img src="images_dest/jeffreihercom2-large.svg" srcset="images_dest/jeffreihercom2-small.svg 400w, images_dest/jeffreihercom2-medium.svg 800w, images_dest/jeffreihercom2-large.svg 1200w" alt="JeffReiher.com_crop"/>
+		<img src="images_dest/jeffreihercom2-large.svg" srcset="images_dest/jeffreihercom2-small.svg 400w, images_dest/jeffreihercom2-medium.svg 800w, images_dest/jeffreihercom2-large.svg 1200w" sizes="(max-width: 250px) 100vw, 50vw" alt="JeffReiher.com_crop"/>
 	</div>
 
 	<div class="jeffreihercom">
-		<img src="images_dest/jeffreihercom-large.svg" srcset="images_dest/jeffreihercom-small.svg 400w, images_dest/jeffreihercom-medium.svg 800w, images_dest/jeffreihercom-large.svg 1200w" alt="jeffreiher.com"/>
+		<img src="images_dest/jeffreihercom-large.svg" srcset="images_dest/jeffreihercom-small.svg 400w, images_dest/jeffreihercom-medium.svg 800w, images_dest/jeffreihercom-large.svg 1200w" sizes="(max-width: 250px) 100vw, 50vw" alt="jeffreiher.com"/>
 	</div>
 
 	<div class="jwrwhite">
-		<img src="images_dest/jwblack21-large.svg" srcset="images_dest/jwblack21-small.svg 400w, images_dest/jwblack21-medium.svg 800w, images_dest/jwblack21-large.svg 1200w" alt="JWR-white"/>
+		<img src="images_dest/jwblack21-large.svg" srcset="images_dest/jwblack21-small.svg 400w, images_dest/jwblack21-medium.svg 800w, images_dest/jwblack21-large.svg 1200w" sizes="(max-width: 250px) 100vw, 50vw" alt="JWR-white"/>
 	</div>
 
 	<div class="jwrblack">
-		<img src="images_dest/jwblack212-large.svg" srcset="images_dest/jwblack212-small.svg 400w, images_dest/jwblack212-medium.svg 800w, images_dest/jwblack212-large.svg 1200w" alt="JWR-black"/>
+		<img src="images_dest/jwblack212-large.svg" srcset="images_dest/jwblack212-small.svg 400w, images_dest/jwblack212-medium.svg 800w, images_dest/jwblack212-large.svg 1200w" sizes="(max-width: 250px) 100vw, 50vw" alt="JWR-black"/>
 	</div>
 
 	<div class="flo_sun">
-		<img src="images_dest/flo_sun-large.jpg" srcset="images_dest/flo_sun-small.jpg 400w, images_dest/flo_sun-medium.jpg 800w, images_dest/flo_sun-large.jpg 1200w" alt="florida sun"/>
+		<img src="images_dest/flo_sun-large.jpg" srcset="images_dest/flo_sun-small.jpg 400w, images_dest/flo_sun-medium.jpg 800w, images_dest/flo_sun-large.jpg 1200w" sizes="(max-width: 250px) 100vw, 50vw" alt="florida sun"/>
 	</div>
 
 	<div class="profile">
-		<img src="images_dest/jeff-medium1.jpg" srcset="images_dest/jeff-small.jpg 400w, images_dest/jeff-medium.jpg 800w, images_dest/jeff-large.jpg 1200w" alt="Jeff's profile pic"/>
+		<img src="images_dest/jeff-medium1.jpg" srcset="images_dest/jeff-small.jpg 400w, images_dest/jeff-medium.jpg 800w, images_dest/jeff-large.jpg 1200w" sizes="(max-width: 250px) 100vw, 50vw" alt="Jeff's profile pic"/>
 	</div>
 
 	
