change link tag to use svg

--- a/lesson3_images_w_markup/jeff_r_images/index.html
+++ b/lesson3_images_w_markup/jeff_r_images/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Jeffrey William Reiher</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/png" href="./images/jwblack21.png">
+	<link rel="icon" type="image/svg+xml" sizes="any" href="./images_dest/jwblack21-small.svg">
 	<style>
 	.container {
 		display: flex;
